# praxies

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  HANDOFF.md  LICENSE  PRAXIS_30_DAY_PLAN.md  PRAXIS_30_DAY_TASKS.md  PRODUCT.md  PROJECT_RAPPORT.md  README.md  SCOPE.md  SECURITY.md  TASKS.md  handoff2.md  need_fixing.md  polish_ui.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pages.yml  release-linux.yml
assets/benchmark/: LICENSE.txt  reference.txt
backend/: launcher.py  requirements.txt
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  fixtures_recovery.py  test_analysis_regression_fixtures.py  test_coaching_v3.py  test_config_llm.py  test_diagnostics.py  test_digest.py  test_digest_api.py  test_disk_space.py  test_dogfood_api.py  test_events_api.py  test_file_services.py  test_index.py  test_llm_client.py  test_m1_regression.py  (+34 more)
docs/: DESIGN.md  DESIGN_REDESIGN.md  DOGFOOD_30_DAY_RUNBOOK.md  RELEASE_NOTES_0.1.0.md  RELEASING.md  REMAKE_PLAN.md  T179_MANUAL_CALIBRATION_CHECKLIST.md  T179_PARTIAL_CALIBRATION.md  TASKS.md  UI_REDESIGN_SPEC.md
frontend/: electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
landing/: index.html  script.js  styles.css
scripts/: build-backend-runtime.sh  dev.sh  generate-release-metadata.sh  install.sh  prepare-electron-resources.sh  preseed-whisper-cache.sh  release-linux.sh  use-local-journal.sh
(+194 files in other folders)
