[project]
name = "praxis-backend"
version = "0.1.0"
description = "Praxis desktop journaling backend (FastAPI + faster-whisper + LiteLLM)."
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "python-multipart==0.0.20",
    "faster-whisper>=1.1.1,<2",
    "litellm>=1.67.5,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
